--- a/Week-01-Pandas/Exercise.ipynb
+++ b/Week-01-Pandas/Exercise.ipynb
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "print (\"Zach, best teacher, 10 of 10\")"
+    "print (\"Zack, best teacher, 10 of 10\")"
    ]
   },
   {
