--- a/Week-01-Pandas/Exercise.ipynb
+++ b/Week-01-Pandas/Exercise.ipynb
@@ -17,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Zach, best teacher, 10 of 10\n"
+      "Zack, best teacher, 10 of 10\n"
      ]
     }
    ],
